--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 infinispan:
   remote:
-    server-list: infinispan-app-hotrod:11222
+    server-list: jdg-app-hotrod.infinispan:11222
 
 openwhisk:
   apiHost: "http://nginx.openwhisk.svc.cluster.local/api/v1/namespaces/_/triggers"
