--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,3 +4,4 @@ infinispan:
 
 openwhisk:
   apiHost: "http://nginx.openwhisk.svc.cluster.local/api/v1/namespaces/_/triggers"
+  dbName: infinispanfeedtriggers
